# xapi-rs

./: .env.template  .gitignore  CHANGELOG.md  Cargo.toml  README.md  Rocket.toml.template
doc/: DATA_README.md  DB_README.md  EXTENSIONS.md  EXT_USERS.md  EXT_VERBS.md  Format.md  LRS_README.md  LanguageMap.md  Resources.md  Statement.md  USERS.md  helper_js.patch
migrations/: 20240503004907_init.sql  20241202092557_filter.sql  20250106013200_users.sql  20250310225651_alter_users.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/data/: about.rs  account.rs  activity.rs  activity_definition.rs  actor.rs  agent.rs  attachment.rs  canonical.rs  ci_string.rs  context.rs  context_activities.rs  context_agent.rs  context_group.rs  data_error.rs  duration.rs  email_address.rs  extensions.rs  fingerprint.rs  format.rs  group.rs  interaction_component.rs  interaction_type.rs  language_map.rs  language_tag.rs  mod.rs  multi_lingual.rs  object_type.rs  person.rs  result.rs  score.rs  statement.rs  statement_ids.rs  statement_object.rs  statement_ref.rs  statement_result.rs  statement_type.rs  sub_statement.rs  sub_statement_object.rs  timestamp.rs  validate.rs  (+2 more)
src/db/: activity.rs  activity_profile.rs  actor.rs  agent_profile.rs  attachment.rs  context.rs  filter.rs  mockdb.rs  mod.rs  result.rs  schema.rs  state.rs  statement.rs  sub_statement.rs  user.rs  verb.rs
src/lrs/: db.rs  headers.rs  mod.rs  role.rs  server.rs  signature.rs  stats.rs  stop_watch.rs  user.rs
src/lrs/resources/: about.rs  activities.rs  activity_profile.rs  agent_profile.rs  agents.rs  mod.rs  state.rs  statement.rs  stats.rs  users.rs  verbs.rs
tests/: about.rs  activities.rs  activity_profile.rs  agent_profile.rs  agents.rs  cts-statements.rs  examples-interactions.rs  examples-objects.rs  examples-statements.rs  signed-statement.rs  state.rs  statement.rs  user.rs  utils.rs  verb.rs
tests/samples/: C1.pem  C2.pem  P2_private.pem  P2_public.pem  ca.cert  conformance-99.json  definition-choice.json  definition-fill-in.json  definition-likert.json  definition-long-fill-in.json  definition-matching.json  definition-numeric.json  definition-other.json  definition-performance.json  definition-sequencing.json  definition-true-false.json  jws-header  jws.sig  multipart.http  multipart.http.bak  object-group.json  object-statement.json  private.key  public.cert  statement-103-unicode.json  statement-choices.json  statement-long.json  statement-no-authority.json  statement-simple.json  statement-simpleCBT.json  statement-to-sign.json  statements.json
