[package]
name = "xapi-rs"
authors = ["Raif S. Naffah <raif@mailbox.org>"]
version = "0.1.10"
edition = "2021"
description = "A conformant LRS implementation of xAPI 2.0.0"
repository = "https://github.com/raif-s-naffah/xapi-rs"
license = "GPL-3.0-or-later"
keywords = ["E-learning", "xAPI", "TinCan", "LRS"]
categories = ["data-structures", "api-bindings", "web-programming"]

[dependencies]
# ----- common / workspace -----
tracing = "0.1"
thiserror = "2"
serde = "1"
serde_json = "1"
iri-string = { version = "0.7", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
email_address = "0.2.9"
uuid = { version = "1", features = ["serde", "v7"] }
language-tags = "0.3"

# ----- data -----
serde_with = { version = "3", features = [ "macros" ] }
url = { version = "2", features = ["serde"] }
speedate = "0.15"
mime = "0.3"
semver = "1"
merge = "0.1"
unicase = "2"
take_mut = "0.2"

# ----- db -----
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
async-recursion = "1.1"
rand = { version = "0.9", features = ["thread_rng"] }

# ----- lrs -----
tracing-subscriber = { version = "0.3", features = [
    "chrono",
    "env-filter",
    "json",
    "parking_lot",
] }
rocket = { version = "0.5", features = ["json", "secrets", "tls"] }
rocket-multipart = { version = "0.2", features = ["json"] }
etag = "4"
hex = "0.4"
base64 = "0.22"
dashmap = "6"
fxhash = "0.2"
lru = "0.13"
openssl = "0.10"
josekit = "0.10"

[dev-dependencies]
test-context = "0.4"
tracing-test = "0.2"
