[package]
name = "xapi-rs"
authors = ["Raif S. Naffah <raif@mailbox.org>"]
version = "0.1.15"
edition = "2024"
description = "A conformant LRS implementation of xAPI 2.0.0"
repository = "https://github.com/raif-s-naffah/xapi-rs"
license = "GPL-3.0-or-later"
keywords = ["xAPI", "LRS", "web", "server"]
categories = ["web-programming::http-server", "data-structures", "api-bindings"]

[dependencies]
# ----- common / workspace -----
tracing = "0.1.41"
thiserror = "2.0.16"
serde = "1.0.219"
serde_json = "1.0.143"
iri-string = { version = "0.7.8", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
email_address = "0.2.9"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
language-tags = "0.3.2"

# ----- data -----
serde_with = { version = "3.14.0", features = ["macros"] }
url = { version = "2.5.7", features = ["serde"] }
speedate = "0.17.0"
mime = "0.3.17"
semver = "1.0.26"
unicase = "2.8.1"
take_mut = "0.2.2"

# ----- db -----
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
async-recursion = "1.1.1"
rand = { version = "0.9.2", features = ["thread_rng"] }

# ----- lrs -----
tracing-subscriber = { version = "0.3.20", features = [
    "chrono",
    "env-filter",
    "json",
    "parking_lot",
] }
rocket = { version = "0.5.1", features = ["json", "secrets", "tls"] }
rocket-multipart = { version = "0.2.1", features = ["json"] }
etag = "4.0.0"
hex = "0.4.3"
base64 = "0.22.1"
dashmap = "6.1.0"
fxhash = "0.2.1"
lru = "0.16.0"
openssl = "0.10.73"
josekit = "0.10.3"

[dev-dependencies]
test-context = "0.4.1"
tracing-test = "0.2.5"
