[package]
name = "xapi-rs"
authors = ["Raif S. Naffah <raif@mailbox.org>"]
version = "0.1.19"
edition = "2024"
description = "A conformant LRS implementation of xAPI 2.0.0"
repository = "https://github.com/raif-s-naffah/xapi-rs"
license = "GPL-3.0-or-later"
keywords = ["xAPI", "LRS", "web", "server"]
categories = ["web-programming::http-server", "data-structures", "api-bindings"]

[dependencies]
# ----- common / workspace -----
tracing = "0.1.44"
thiserror = "2.0.17"
serde = "1.0.228"
serde_json = "1.0.149"
iri-string = { version = "0.7.10", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
email_address = "0.2.9"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
language-tags = "0.3.2"

# ----- data -----
serde_with = { version = "3.16.1", features = ["macros"] }
url = { version = "2.5.8", features = ["serde"] }
speedate = "0.17.0"
mime = "0.3.17"
semver = "1.0.27"
unicase = "2.9.0"
take_mut = "0.2.2"

# ----- db -----
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.9.0-alpha.1", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
async-recursion = "1.1.1"
rand = { version = "0.9.2", features = ["thread_rng"] }

# ----- lrs -----
tracing-subscriber = { version = "0.3.22", features = [
    "chrono",
    "env-filter",
    "json",
    "parking_lot",
] }
rocket = { version = "0.5.1", features = ["json", "secrets", "tls"] }
rocket-multipart = { version = "0.2.1", features = ["json"] }
etag = "4.0.0"
hex = "0.4.3"
base64 = "0.22.1"
dashmap = "6.1.0"
fxhash = "0.2.1"
lru = "0.16.3"
openssl = "0.10.75"
josekit = "0.10.3"

[dev-dependencies]
test-context = "0.5.4"
tracing-test = "0.2.5"
